Added the proper image url

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 <h4>Mens Fashion</h4>
                 <div class="elem-part2">
-                    <img src="https://unsplash.com/photos/woman-in-white-long-sleeve-shirt-wearing-brown-hat-8J56bYMT3-Q"
+                    <img src="https://images.unsplash.com/photo-1611042553365-9b101441c135?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="">
                     <h1>Khadim & Tom Ford</h1>
                     <h5>25th March 2020</h5>
