--- a/index.html
+++ b/index.html
@@ -1,146 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div id="main">
-        <div id="nav">
-            <h1>premier</h1>
-            <h2>Model</h2>
-            <h2>Women/Men</h2>
-            <h2>Agency/Blog/Information</h2>
-            <h2><i class="ri-search-line"></i></h2>
-        </div>
-        <div id="center">
-            <div id="content">
-                <video autoplay loop muted src="video 1.mp4"></video>
-                <div id="overlay">
-                    <div id="over1">
-                        <h1>Photography <br>and flims</h1>
-                        <h2>1</h2>
-                    </div>
-                    <div id="over2">
-                        <h4>Explore</h4>
-                        <img src="/arrow.png" alt="">
-                    </div>
-                </div>
+      <div id="nav">
+        <h1>premier</h1>
+        <h2>Model</h2>
+        <h2>Women/Men</h2>
+        <h2>Agency/Blog/Information</h2>
+        <h2><i class="ri-search-line"></i></h2>
+      </div>
+      <div id="center">
+        <div id="content">
+          <video autoplay loop muted src="video 1.mp4"></video>
+          <div id="overlay">
+            <div id="over1">
+              <h1>Photography <br />and flims</h1>
+              <h2>1</h2>
             </div>
+            <div id="over2">
+              <h4>Explore</h4>
+              <img src="/arrow.png" alt="" />
+            </div>
+          </div>
         </div>
-        <div id="scroll">
-            <div id="container">
-                <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWwlMjBwb3J0cmlhdHN8ZW58MHx8MHx8fDA%3D"
-                    alt="">
+      </div>
+      <div id="scroll">
+        <div id="container">
+          <img
+            src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+          <img
+            src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWwlMjBwb3J0cmlhdHN8ZW58MHx8MHx8fDA%3D"
+            alt=""
+          />
 
-                <img src="https://media.istockphoto.com/id/1277309077/photo/shes-glowing-and-shining-like-a-star.webp?a=1&b=1&s=612x612&w=0&k=20&c=Uel6zmI9MWbv1SRmKJZVXfxr4B68yHr2luNxz1zRlJA="
-                    alt="">
-                <img src="https://plus.unsplash.com/premium_photo-1668485966810-cbd0f685f58f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z2lybHxlbnwwfHwwfHx8MA%3D%3D "
-                    alt="">
-                <img src="https://plus.unsplash.com/premium_photo-1668319914124-57301e0a1850?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGdpcmx8ZW58MHx8MHx8fDA%3D"
-                    alt="">
-                <img src="https://plus.unsplash.com/premium_photo-1668638806493-8fb5f75d7799?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDM3fHx8ZW58MHx8fHx8"
-                    alt="">
-            </div>
-            <div id="container">
-                <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWwlMjBwb3J0cmlhdHN8ZW58MHx8MHx8fDA%3D"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1475431701177-8a80e7bf2c5f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fG1vZGVsJTIwcG9ydHJpYXRzfGVufDB8fDB8fHww"
-                    alt="">
-                <img src="https://media.istockphoto.com/id/1277309077/photo/shes-glowing-and-shining-like-a-star.webp?a=1&b=1&s=612x612&w=0&k=20&c=Uel6zmI9MWbv1SRmKJZVXfxr4B68yHr2luNxz1zRlJA="
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWx8ZW58MHx8MHx8fDA%3D"
-                    alt="">
-                <img src="https://plus.unsplash.com/premium_photo-1668485966810-cbd0f685f58f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z2lybHxlbnwwfHwwfHx8MA%3D%3D "
-                    alt="">
-                <img src="https://plus.unsplash.com/premium_photo-1668319914124-57301e0a1850?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGdpcmx8ZW58MHx8MHx8fDA%3D"
-                    alt="">
-                <img src="https://plus.unsplash.com/premium_photo-1668638806493-8fb5f75d7799?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDM3fHx8ZW58MHx8fHx8"
-                    alt="">
-            </div>
+          <img
+            src="https://media.istockphoto.com/id/1277309077/photo/shes-glowing-and-shining-like-a-star.webp?a=1&b=1&s=612x612&w=0&k=20&c=Uel6zmI9MWbv1SRmKJZVXfxr4B68yHr2luNxz1zRlJA="
+            alt=""
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1668485966810-cbd0f685f58f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z2lybHxlbnwwfHwwfHx8MA%3D%3D "
+            alt=""
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1668319914124-57301e0a1850?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGdpcmx8ZW58MHx8MHx8fDA%3D"
+            alt=""
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1668638806493-8fb5f75d7799?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDM3fHx8ZW58MHx8fHx8"
+            alt=""
+          />
         </div>
-        <div id="alphabets">
-            <h5>All</h5>
-            <h6>A</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
-            <h6>D</h6>
-            <h6>B</h6>
-            <h6>C</h6>
+        <div id="container">
+          <img
+            src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+          <img
+            src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWwlMjBwb3J0cmlhdHN8ZW58MHx8MHx8fDA%3D"
+            alt=""
+          />
+          <img
+            src="https://images.unsplash.com/photo-1475431701177-8a80e7bf2c5f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fG1vZGVsJTIwcG9ydHJpYXRzfGVufDB8fDB8fHww"
+            alt=""
+          />
+          <img
+            src="https://media.istockphoto.com/id/1277309077/photo/shes-glowing-and-shining-like-a-star.webp?a=1&b=1&s=612x612&w=0&k=20&c=Uel6zmI9MWbv1SRmKJZVXfxr4B68yHr2luNxz1zRlJA="
+            alt=""
+          />
+          <img
+            src="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW9kZWx8ZW58MHx8MHx8fDA%3D"
+            alt=""
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1668485966810-cbd0f685f58f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z2lybHxlbnwwfHwwfHx8MA%3D%3D "
+            alt=""
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1668319914124-57301e0a1850?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGdpcmx8ZW58MHx8MHx8fDA%3D"
+            alt=""
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1668638806493-8fb5f75d7799?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDM3fHx8ZW58MHx8fHx8"
+            alt=""
+          />
+        </div>
+      </div>
+      <div id="alphabets">
+        <h5>All</h5>
+        <h6>A</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+        <h6>D</h6>
+        <h6>B</h6>
+        <h6>C</h6>
+      </div>
+      <div id="page2">
+        <div id="page2-part1"></div>
+        <div id="page2-part2">
+          <img
+            src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
 
+          <div class="page2-part2-text">
+            <h1></h1>
+            <p></p>
+          </div>
         </div>
-        <div id="page2">
-            <div id="page2-part1"></div>
-            <div id="page2-part2">
-                <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="">
-            </div>
+      </div>
+      <div id="page3">
+        <h1>UPDATES</h1>
+        <div class="elem">
+          <h4>Mens Fashion</h4>
+          <div class="elem-part2">
+            <img
+              src="https://plus.unsplash.com/premium_photo-1675200124904-dfadce24119f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bW9kZWwlMjBnaXJsfGVufDB8fDB8fHww"
+              alt=""
+            />
+            <h1>Khadim & Tom Ford</h1>
+            <h5>25th March 2020</h5>
+          </div>
         </div>
-        <div id="page3">
-            <h1>UPDATES</h1>
-            <div class="elem">
-                <h4>Mens Fashion</h4>
-                <div class="elem-part2">
-                    <img src="https://plus.unsplash.com/premium_photo-1675200124904-dfadce24119f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bW9kZWwlMjBnaXJsfGVufDB8fDB8fHww"
-                        alt="">
-                    <h1>Khadim & Tom Ford</h1>
-                    <h5>25th March 2020</h5>
-                </div>
-            </div>
-            <div class="elem">
-
-                <h4>Mens Fashion</h4>
-                <div class="elem-part2">
-                    <img src="https://images.unsplash.com/photo-1611042553365-9b101441c135?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="">
-                    <h1>Khadim & Tom Ford</h1>
-                    <h5>25th March 2020</h5>
-                </div>
-            </div>
-            <div class="elem">
-                <h4>Mens Fashion</h4>
-                <div class="elem-part2">
-                    <h1>Khadim & Tom Ford</h1>
-                    <h5>25th March 2020</h5>
-                </div>
-            </div>
-            <div class="elem">
-                <h4>Mens Fashion</h4>
-                <div class="elem-part2">
-                    <h1>Khadim & Tom Ford</h1>
-                    <h5>25th March 2020</h5>
-                </div>
-            </div>
+        <div class="elem">
+          <h4>Mens Fashion</h4>
+          <div class="elem-part2">
+            <img
+              src="https://images.unsplash.com/photo-1611042553365-9b101441c135?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+            <h1>Khadim & Tom Ford</h1>
+            <h5>25th March 2020</h5>
+          </div>
         </div>
+        <div class="elem">
+          <h4>Mens Fashion</h4>
+          <div class="elem-part2">
+            <h1>Khadim & Tom Ford</h1>
+            <h5>25th March 2020</h5>
+          </div>
+        </div>
+        <div class="elem">
+          <h4>Mens Fashion</h4>
+          <div class="elem-part2">
+            <h1>Khadim & Tom Ford</h1>
+            <h5>25th March 2020</h5>
+          </div>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
